validate email, update api update user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,9 +216,10 @@
     <string name="hint_birthday">Your birthday</string>
     <string name="text_remind_filed_required">You must input several required fields with (*) symbol</string>
     <string name="text_individual">INDIVIDUAL</string>
-    <string name="text_des_individual">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
+    <string name="text_des_individual">Register as a collector to keep track and resell your sneakers!</string>
     <string name="text_store">STORE</string>
-    <string name="text_des_store">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
+    <string name="text_des_store">This feature is coming soon!</string>
     <string name="format_credit_card">✱✱✱✱ ✱✱✱✱ ✱✱✱✱ %s</string>
+    <string name="error_email_validate">* InValid Email Address</string>
 
 </resources>
