change main activity header layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="label_create_account">Create account</string>
     <string name="label_log_in">Log in</string>
     <string name="label_Explore">Explore</string>
+    <string name="label_sneaker_board">Sneaker board</string>
     <string name="label_Copied">Copied</string>
     <string name="label_Collection">Grail collection</string>
     <string name="label_verify_phone">Verification</string>
