--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,12 +222,14 @@
     <string name="text_des_store">This feature is coming soon!</string>
     <string name="format_credit_card">✱✱✱✱ ✱✱✱✱ ✱✱✱✱ %s</string>
     <string name="error_email_validate">* InValid Email Address</string>
-    <string name="format_size">Size %f (U.S.)</string>
+    <string name="format_size">Size %s (U.S.)</string>
     <string name="format_release_date">Released at %s</string>
     <string name="format_owned_by">Owned by
         <font color="#095255">
             <b>%s</b>
         </font>
     </string>
+    <string name="label_get_owner_info">Get owner information</string>
+
 
 </resources>
