--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,6 +234,7 @@
         &lt;/font>
     </string>
     <string name="label_get_owner_info">Get owner information</string>
+    <string name="label_grail_story">See your Grail story</string>
 
 
 </resources>
