--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,6 +237,8 @@
     <string name="label_btn_grail_story">See your Grail story</string>
     <string name="label_grail_story">%s Story</string>
     <string name="label_setting_change_password">Change password</string>
+    <string name="format_history_released">This Grails was released by %s.</string>
+    <string name="format_history_resell">Was traded to %s from %s.</string>
 
 
 </resources>
