--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,8 +244,10 @@
     <string name="msg_short_passcode">Passcode needs contain 6 digits</string>
     <string name="msg_new_passcode_not_match">Re-enter passcode not match</string>
     <string name="text_history_owned">Congrats! It’s your Grails.</string>
+    <string name="text_history_was_owned">It was your Grails.</string>
     <string name="text_history_claim">Was claimed by %s.</string>
     <string name="text_history_claim_owned">Congrats! You are the first owner.</string>
+    <string name="text_history_claim_was_owned">You were the first owner.</string>
 
 
 </resources>
